# trade_infra

./: .gitignore  README.md
.github/workflows/: integration.yml  market-data-svc.yml  order-svc.yml  python.yml  risk-svc.yml
docs/superpowers/plans/: 2026-05-17-ci-risk-calc-rs.md  2026-05-17-ci-tick-engine.md  2026-05-17-ercot-api-key.md  2026-05-17-ercot-data-feed.md
docs/superpowers/specs/: 2026-05-16-rust-libriskcalc-design.md  2026-05-16-strategy-engine-design.md  2026-05-16-trade-infra-design.md  2026-05-17-ci-risk-calc-rs-design.md  2026-05-17-ci-tick-engine-design.md  2026-05-17-ercot-api-key-design.md  2026-05-17-ercot-data-feed-design.md  2026-05-17-momentum-strategy-design.md  2026-05-17-spread-arb-additional-pairs-design.md
infra/: docker-compose.yml
market-data-svc/include/: marketdata.h
market-data-svc/src/: main.cpp  metrics_server.cpp  metrics_server.h
order-svc/internal/listener/: listener.go
order-svc/internal/order/: store.go
python/: Dockerfile.strategy  pyproject.toml
python/strategies/: base.py  mean_reversion.py  momentum.py
python/tests/: test_ma_crossover.py  test_momentum.py  test_spread_arb.py
quant_research_tool/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
quant_research_tool/backtester/: __init__.py  api.py  decorators.py  indicators.py
quant_research_tool/docs/superpowers/plans/: 2026-05-14-backtesting-engine.md
quant_research_tool/docs/superpowers/specs/: 2026-05-14-backtesting-engine-design.md
quant_research_tool/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
quant_research_tool/frontend/src/: App.tsx  index.css  types.ts
quant_research_tool/frontend/src/components/: EquityCurve.tsx  MetricsCards.tsx  RunForm.tsx
quant_research_tool/src/: backtest.rs  execution.rs  indicators.rs  lib.rs  metrics.rs  portfolio.rs  types.rs
quant_research_tool/strategies/: examples.py
quant_research_tool/tests/: conftest.py  test_api.py  test_decorators.py  test_engine.py
risk-svc/: CMakeLists.txt  go.mod
risk-svc/cmd/server/: main.go
risk-svc/include/: riskcalc.h
risk-svc/internal/handler/: handler.go
risk-svc/internal/risk/: store.go
risk-svc/internal/riskcalc/: riskcalc.go
risk-svc/metrics/: metrics.go
risk-svc/risk-calc-rs/src/: lib.rs
risk-svc/tests/: test_risk_calc.cpp
strategy-engine/internal/gate/: gate.go  gate_test.go
strategy-engine/internal/listener/: listener.go
strategy-engine/internal/riskstore/: riskstore.go
strategy-engine/internal/submitter/: submitter.go
trade_infra/: .gitignore  README.md
trade_infra/.github/workflows/: integration.yml  market-data-svc.yml  order-svc.yml  python.yml  risk-svc.yml
trade_infra/docs/superpowers/plans/: 2026-05-16-multi-node.md  2026-05-16-rust-libmarketdata.md  2026-05-16-rust-libriskcalc.md  2026-05-16-strategy-engine.md  2026-05-16-trade-infra.md  2026-05-17-momentum-strategy.md  2026-05-17-readme-rewrite.md  2026-05-17-spread-arb-additional-pairs.md  2026-05-17-spread-arb.md
trade_infra/docs/superpowers/specs/: 2026-05-16-multi-node-design.md  2026-05-16-rust-libmarketdata-design.md  2026-05-17-readme-v0-12-design.md  2026-05-17-spread-arb-design.md
trade_infra/infra/: docker-compose.yml  prometheus.yml  slo_rules.yml
trade_infra/infra/grafana/dashboards/: trade_infra.json
trade_infra/infra/grafana/provisioning/dashboards/: default.yml
trade_infra/market-data-svc/: CMakeLists.txt  Dockerfile
trade_infra/market-data-svc/src/: db_writer.cpp  db_writer.h  tick_generator.cpp  tick_generator.h
trade_infra/market-data-svc/tests/: test_tick_generator.cpp
trade_infra/market-data-svc/tick-engine/: Cargo.toml
trade_infra/market-data-svc/tick-engine/src/: lib.rs
trade_infra/order-svc/: Dockerfile  go.mod
trade_infra/order-svc/cmd/server/: main.go
trade_infra/order-svc/internal/evaluator/: evaluator.go  evaluator_test.go
trade_infra/order-svc/internal/handler/: handler.go  handler_test.go
trade_infra/order-svc/internal/listener/: listener.go
trade_infra/order-svc/internal/order/: model.go  store_test.go
trade_infra/order-svc/metrics/: metrics.go
trade_infra/python/: Dockerfile.strategy  analytics.py  data_gen.py  pyproject.toml  smoke_test.py
trade_infra/python/strategies/: base.py  ma_crossover.py  spread_arb.py
trade_infra/python/tests/: test_analytics.py  test_data_gen.py  test_mean_reversion.py
trade_infra/risk-svc/: CMakeLists.txt  Dockerfile  go.mod
trade_infra/risk-svc/include/: riskcalc.h
trade_infra/risk-svc/internal/listener/: listener.go
trade_infra/risk-svc/internal/risk/: model.go  store_test.go
trade_infra/risk-svc/internal/riskcalc/: riskcalc_test.go
trade_infra/risk-svc/risk-calc-rs/: Cargo.toml
trade_infra/risk-svc/risk-calc-rs/src/: lib.rs
trade_infra/risk-svc/src/: risk_calc.cpp  risk_calc.h
trade_infra/risk-svc/tests/: test_risk_calc.cpp
trade_infra/sql/: schema.sql
trade_infra/strategy-engine/: Dockerfile  go.mod  go.sum
trade_infra/strategy-engine/cmd/server/: main.go
trade_infra/strategy-engine/internal/listener/: listener.go
trade_infra/strategy-engine/internal/signal/: model.go  store.go  store_test.go
trade_infra/strategy-engine/internal/submitter/: submitter_test.go
trade_infra/strategy-engine/metrics/: metrics.go
