[build-system]
requires = ["scikit-build-core", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "quant-research-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "yfinance",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]

[tool.scikit-build]
cmake.version = ">=3.15"
ninja.version = ">=1.10"

[tool.scikit-build.wheel]
packages = ["backtester", "strategies"]
