[project]
name = "trade-infra-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
